--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "foxtoberfest-serve",
+  "name": "modpack-server",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -9,12 +9,14 @@
     "cf-typegen": "wrangler types"
   },
   "dependencies": {
+    "@netlify/functions": "^3.1.10",
     "chanfana": "^2.6.3",
     "hono": "^4.6.20",
+    "typescript": "^4.9.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/node": "22.13.0",
+    "@types/node": "^22.18.0",
     "@types/service-worker-mock": "^2.0.4",
     "wrangler": "^4.33.1"
   }
