--- a/modpacks/foxtoberfest2025/mods/oh-the-trees-youll-grow.pw.toml
+++ b/modpacks/foxtoberfest2025/mods/oh-the-trees-youll-grow.pw.toml
@@ -1,6 +1,6 @@
 name = "Oh The Trees You'll Grow"
 filename = "Oh-The-Trees-Youll-Grow-fabric-1.20.1-1.3.13.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/g8NOG5OR/versions/qCMx6YA7/Oh-The-Trees-Youll-Grow-fabric-1.20.1-1.3.13.jar"
