--- a/modpacks/foxtoberfest2025/config/iris.properties
+++ b/modpacks/foxtoberfest2025/config/iris.properties
@@ -1,6 +1,9 @@
+#This file stores configuration options for Iris, such as the currently active shaderpack
+#Fri Aug 29 18:45:12 EDT 2025
+allowUnknownShaders=false
 colorSpace=SRGB
 disableUpdateMessage=false
 enableDebugOptions=false
-maxShadowRenderDistance=32
-shaderPack=Cursed Fog - V1.0.7.zip
 enableShaders=true
+maxShadowRenderDistance=32
+shaderPack=Spooklementary_1.1.zip
