--- a/modpacks/foxtoberfest2025/mods/rei.pw.toml
+++ b/modpacks/foxtoberfest2025/mods/rei.pw.toml
@@ -1,6 +1,6 @@
 name = "Roughly Enough Items (REI)"
 filename = "RoughlyEnoughItems-18.0.808-fabric.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/nfn13YXA/versions/C4edQN1w/RoughlyEnoughItems-18.0.808-fabric.jar"
