--- a/modpacks/foxtoberfest2025/config/iris.properties
+++ b/modpacks/foxtoberfest2025/config/iris.properties
@@ -1,9 +1,9 @@
 #This file stores configuration options for Iris, such as the currently active shaderpack
-#Fri Aug 29 18:45:12 EDT 2025
+#Sat Aug 30 12:26:41 EDT 2025
 allowUnknownShaders=false
 colorSpace=SRGB
 disableUpdateMessage=false
 enableDebugOptions=false
 enableShaders=true
 maxShadowRenderDistance=32
-shaderPack=Spooklementary_1.1.zip
+shaderPack=ComplementaryUnbound_r5.5.1 + EuphoriaPatches_1.6.5
